--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,8 @@ target_link_libraries(
         nlohmann_json::nlohmann_json
         magic_enum
         fmt::fmt-header-only
-        boost
+        span
+        small_vector
 )
 
 if(TT_METAL_BUILD_TESTS)
