--- a/tt_metal/common/CMakeLists.txt
+++ b/tt_metal/common/CMakeLists.txt
@@ -20,7 +20,8 @@ target_link_libraries(
         nlohmann_json::nlohmann_json
         magic_enum
         fmt::fmt-header-only
-        boost
+        span
+        small_vector
         Metalium::Metal::STL
         umd::Firmware
         umd::device
