[skip ci] Update tt-metal-l2-nightly.yaml

--- a/.github/workflows/tt-metal-l2-nightly.yaml
+++ b/.github/workflows/tt-metal-l2-nightly.yaml
@@ -44,7 +44,7 @@ jobs:
     with:
       build-wheel: true
   test:
-    needs: build-artifact
+    needs: build
     strategy:
       fail-fast: false
       matrix:
