#17477: Move SmallVector and ShapeBase to re-use within Metal (#17669)
### Ticket
#17477

### Problem description
TT-distributed requires ND shapes in Metal. Instead of having our own,
moving `ShapeBase` and `SmallVector` into Metal.

### What's changed
* Moved `ShapeBase` and `SmallVector` into Metal. `SmallVector` really
should be part of our "stl" library, so I put it there for now. I used
`ttsl` namespace - my goal is to replace `tt::stl` as it is shorter and
easier to type, also avoids confusion if anyone attempts to use `stl::`.

### Checklist
- [x] [All post
commit](https://github.com/tenstorrent/tt-metal/actions/runs/13190528665)
- [X] New/Existing tests provide coverage for changes

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -25,6 +25,9 @@ CPMAddPackage(
 add_library(span INTERFACE)
 target_link_libraries(span INTERFACE Boost::core)
 
+add_library(small_vector INTERFACE)
+target_link_libraries(small_vector INTERFACE Boost::container)
+
 ############################################################################################################################
 # yaml-cpp
 ############################################################################################################################
