Add split scatter implementation

--- a/ttnn/cpp/ttnn/operations/experimental/ccl/CMakeLists.txt
+++ b/ttnn/cpp/ttnn/operations/experimental/ccl/CMakeLists.txt
@@ -19,6 +19,11 @@ set(CCL_EXPERIMENTAL_TTNN_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/all_gather_async/device/all_gather_async_program_minimal_variants.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/all_reduce_async/all_reduce_async.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/all_reduce_async/all_reduce_async_pybind.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/split_scatter/split_scatter_pybind.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/split_scatter/split_scatter.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/split_scatter/split_scatter_pybind.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/split_scatter/device/split_scatter_op.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/split_scatter/device/multi_core/split_scatter_op_multi_core.cpp
     CACHE INTERNAL
     "CCL Experimental sources to reuse in ttnn build"
 )
