--- a/tests/ttnn/python_api_testing/sweep_tests/test_configs/ci_sweep_tests_working/wormhole/ttnn_eltwise_signbit_test.yaml
+++ b/tests/ttnn/python_api_testing/sweep_tests/test_configs/ci_sweep_tests_working/wormhole/ttnn_eltwise_signbit_test.yaml
@@ -1,6 +1,6 @@
 ---
 test-list:
-  - ttnn-sum:
+  - ttnn-eltwise-signbit:
       shape:
         start-shape: [1, 1, 32, 32]
         end-shape: [6, 12, 256, 256]
@@ -15,13 +15,11 @@ test-list:
           low: -100
           high: 100
       comparison:
-        function: comp_pcc
-      args-gen: gen_dim_args
+        function: comp_equal
+      args-gen: gen_dtype_layout_device
       args:
         data-layout: ["TILE"]
         data-type: ["BFLOAT16", "BFLOAT8_B"]
         buffer-type: ["DRAM", "L1"]
         out-buffer-type: ["DRAM", "L1"]
-      output-file: eltwise_sum_sweep.csv
-      env:
-        # TT_PCI_DMA_BUF_SIZE: "1048576"
+      output-file: eltwise_signbit_sweep.csv
