--- a/.github/workflows/build-and-unit-tests.yaml
+++ b/.github/workflows/build-and-unit-tests.yaml
@@ -87,12 +87,13 @@ jobs:
             -e TT_METAL_HOME=${{ github.workspace }}
             -e TT_METAL_SLOW_DISPATCH_MODE=1
             -e LD_LIBRARY_PATH=${{ github.workspace }}/build/lib
+            -e GTEST_OUTPUT=xml:generated/test_reports/test_results.xml
           run_args: |
             pip install --force-reinstall pip==21.2.4
             pip install -r tt_metal/python_env/requirements-dev.txt
             pip install -e .
             mkdir -p generated/test_reports
-            ${{ matrix.test-group.cmd }} --gtest_output=xml:generated/test_reports/test_results.xml
+            ${{ matrix.test-group.cmd }}
       - uses: ./.github/actions/slack-report
         if: ${{ failure() }}
         with:
