--- a/.github/workflows/code-analysis.yaml
+++ b/.github/workflows/code-analysis.yaml
@@ -47,6 +47,21 @@ jobs:
       version: ${{ inputs.version }}
       architecture: ${{ inputs.architecture }}
 
+  links-checker:
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          clean: false
+      - name: Link Checker
+        uses: lycheeverse/lychee-action@v2
+        with:
+          # Check all markdown, html and reStructuredText files in repo (default)
+          args: --base . --verbose --no-progress './**/*.md' './**/*.rst'
+          # Don't fail action on broken links
+          fail: false
+
   clang-tidy:
     name: 🤖 Clang Tidy
     needs: build-docker-image
