#17433: Add runs on

--- a/.github/workflows/code-analysis.yaml
+++ b/.github/workflows/code-analysis.yaml
@@ -48,6 +48,7 @@ jobs:
       architecture: ${{ inputs.architecture }}
 
   links-checker:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
