Add boost fix blas

--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -23,6 +23,15 @@ RUN mkdir -p /usr/local/bin && wget -O /tmp/ccache.tar.xz https://github.com/cca
     tar -xf /tmp/ccache.tar.xz -C /usr/local/bin --strip-components=1 && \
     rm /tmp/ccache.tar.xz
 
+ARG BOOST_VERSION=1.86.0
+RUN mkdir -p /tmp/boost \
+    && wget -O /tmp/boost/boost_${BOOST_VERSION}.tar.bz2 "https://boostorg.jfrog.io/artifactory/main/release/${BOOST_VERSION}/source/boost_${BOOST_VERSION//./_}.tar.bz2" \
+    && tar --bzip2 -xf /tmp/boost/boost_${BOOST_VERSION}.tar.bz2 -C /tmp/boost --strip-components=1 \
+    && cd /tmp/boost \
+    && ./bootstrap.sh --with-libraries=core,container,smart_ptr,interprocess \
+    && ./b2 install --prefix=/usr/local --with-core --with-container --with-smart_ptr --with-interprocess \
+    && rm -rf /tmp/boost
+
 ARG FMT_VERSION=11.0.1
 RUN mkdir -p /tmp/fmt \
     && wget -O /tmp/fmt/fmt-${FMT_VERSION}.tar.gz "https://github.com/fmtlib/fmt/archive/${FMT_VERSION}.tar.gz" \
