--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -26,8 +26,8 @@ RUN mkdir -p /usr/local/bin && wget -O /tmp/ccache.tar.xz https://github.com/cca
 ARG BOOST_VERSION=1.86.0
 RUN mkdir -p /tmp/boost \
     && BOOST_VERSION_UNDERSCORE=$(echo ${BOOST_VERSION} | sed 's/\./_/g') \
-    && wget -O /tmp/boost/boost_${BOOST_VERSION}.tar.bz2 "https://boostorg.jfrog.io/artifactory/main/release/${BOOST_VERSION}/source/boost_${BOOST_VERSION_UNDERSCORE}.tar.bz2" \
-    && tar --bzip2 -xf /tmp/boost/boost_${BOOST_VERSION}.tar.bz2 -C /tmp/boost --strip-components=1 \
+    && wget -O /tmp/boost/boost_${BOOST_VERSION}.tar.gz "https://archives.boost.io/release/${BOOST_VERSION}/source/boost_${BOOST_VERSION_UNDERSCORE}.tar.gz" \
+    && tar -xzf /tmp/boost/boost_${BOOST_VERSION}.tar.gz -C /tmp/boost --strip-components=1 \
     && cd /tmp/boost \
     && ./bootstrap.sh --with-libraries=core,container,smart_ptr,interprocess \
     && ./b2 install --prefix=/usr/local --with-core --with-container --with-smart_ptr --with-interprocess \
