--- a/.github/workflows/package-and-release.yaml
+++ b/.github/workflows/package-and-release.yaml
@@ -20,6 +20,7 @@ jobs:
       version: ${{ matrix.version }}
       distro: ubuntu
       publish-artifact: true
+      build-wheel: true
     secrets: inherit
 
   build-artifact-profiler:    
