#15496 Change Tensor serialization to serialize TensorSpec with flatbuffer (#17748)
### Ticket
https://github.com/tenstorrent/tt-metal/issues/15496 
#16067

### Problem description
Currently TensorSpec isn't being serialized properly, which causes
issues in some cases.
In particular, it causes bugs in `as_tensor` with transposed tiles.

### What's changed
Introduce flatbuffer schema for TensorSpec serialization.
Added conversion code to/from TensorSpec to flatbuffer struct.
Heavily modified serialization code to preserve compatibility with the
old format, but serialize TensorSpec with flatbuffer in newer versions.
Changed fstream io into fread/fwrite to improve performance.

### Checklist
- [x] [All post
commit](https://github.com/tenstorrent/tt-metal/actions/runs/13213319656)
CI passes
- [x] [Model
regression](https://github.com/tenstorrent/tt-metal/actions/runs/13209781898)
- [x] [Device performance
regression](https://github.com/tenstorrent/tt-metal/actions/runs/13209784841)
- [x] New/Existing tests provide coverage for changes

--- a/ttnn/CMakeLists.txt
+++ b/ttnn/CMakeLists.txt
@@ -681,6 +681,7 @@ set(TTNN_PUBLIC_INCLUDE_DIRS
     ${CMAKE_CURRENT_SOURCE_DIR} # ${PROJECT_SOURCE_DIR}/ttnn
     ${CMAKE_CURRENT_SOURCE_DIR}/cpp/ttnn/deprecated # symlink to tt_eager; should become native folder once merge complete
     ${CMAKE_CURRENT_SOURCE_DIR}/cpp
+    ${CMAKE_CURRENT_BINARY_DIR}/flatbuffers
 )
 set(TTNN_PUBLIC_LINK_LIBRARIES
     metal_common_libs
@@ -689,6 +690,7 @@ set(TTNN_PUBLIC_LINK_LIBRARIES
     xtensor
     xtensor-blas
     xtl
+    FlatBuffers::FlatBuffers
 )
 set(TTNN_PUBLIC_LINK_DIRS "")
 
@@ -803,6 +805,8 @@ endforeach(
     ${TTNN_SUBLIBRARIES}
 )
 
+GENERATE_FBS_HEADER(${CMAKE_CURRENT_SOURCE_DIR}/cpp/ttnn/tensor/flatbuffer/tensor_types.fbs)
+list(APPEND TENSOR_SRCS ${FBS_GENERATED_HEADER_FILE})
 add_ttnn_sublibrary(ttnn_tensor ${TENSOR_SRCS})
 add_ttnn_sublibrary(ttnn_ccl ${CCL_TTNN_SRCS})
 add_ttnn_sublibrary(ttnn_ccl_exp ${CCL_EXPERIMENTAL_TTNN_SRCS})
