--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -48,20 +48,21 @@ RUN mkdir -p /tmp/fmt \
     && make -C /tmp/fmt/build install \
     && rm -rf /tmp/fmt
 
-ARG YAML_VERSION=0.8.0
-RUN mkdir -p /tmp/yaml \
-    && wget -O /tmp/yaml/yaml-${YAML_VERSION}.tar.gz "https://github.com/jbeder/yaml-cpp/archive/refs/tags/${YAML_VERSION}.tar.gz" \
-    && tar -xzf /tmp/yaml/yaml-${YAML_VERSION}.tar.gz -C /tmp/yaml --strip-components=1 \
-    && cmake \
-         -S /tmp/yaml \
-         -B /tmp/yaml/build \
-         -DCMAKE_BUILD_TYPE=Release \
-         -DYAML_CPP_BUILD_TESTS=OFF \
-         -DYAML_CPP_BUILD_TOOLS=OFF \
-         -DYAML_BUILD_SHARED_LIBS=OFF \
-    && make -C /tmp/yaml/build -j$(nproc) \
-    && make -C /tmp/yaml/build install \
-    && rm -rf /tmp/yaml
+# libstdc++ vs libc++ issue arises
+#ARG YAML_VERSION=0.8.0
+#RUN mkdir -p /tmp/yaml \
+#    && wget -O /tmp/yaml/yaml-${YAML_VERSION}.tar.gz "https://github.com/jbeder/yaml-cpp/archive/refs/tags/${YAML_VERSION}.tar.gz" \
+#    && tar -xzf /tmp/yaml/yaml-${YAML_VERSION}.tar.gz -C /tmp/yaml --strip-components=1 \
+#    && cmake \
+#         -S /tmp/yaml \
+#         -B /tmp/yaml/build \
+#         -DCMAKE_BUILD_TYPE=Release \
+#         -DYAML_CPP_BUILD_TESTS=OFF \
+#         -DYAML_CPP_BUILD_TOOLS=OFF \
+#         -DYAML_BUILD_SHARED_LIBS=OFF \
+#    && make -C /tmp/yaml/build -j$(nproc) \
+#    && make -C /tmp/yaml/build install \
+#    && rm -rf /tmp/yaml
 
 ARG JSON_VERSION=3.11.3
 RUN mkdir -p /tmp/json \
