--- a/tt_metal/common/CMakeLists.txt
+++ b/tt_metal/common/CMakeLists.txt
@@ -17,7 +17,7 @@ target_link_libraries(
     common
     PUBLIC
         nlohmann_json::nlohmann_json
-        magic_enum
+        magic_enum::magic_enum
         fmt::fmt-header-only
         span
         Metalium::Metal::STL
