--- a/.github/workflows/tt-metal-l2-nightly.yaml
+++ b/.github/workflows/tt-metal-l2-nightly.yaml
@@ -64,13 +64,13 @@ jobs:
         with:
           name: eager-dist-${{ matrix.os }}-any
       - name: ${{ matrix.test-group.name }} tests
-        timeout-minutes: ${{ inputs.timeout || 45 }}
+        timeout-minutes: ${{ inputs.timeout || '45' }}
         uses: ./.github/actions/docker-run
         with:
           docker_username: ${{ github.actor }}
           docker_password: ${{ secrets.GITHUB_TOKEN }}
           docker_opts: |
-            -e ARCH_NAME=${{ inputs.arch || wormhole_b0 }}
+            -e ARCH_NAME=${{ inputs.arch || 'wormhole_b0' }}
           run_args: |
             WHEEL_FILENAME=$(ls -1 *.whl)
             pip3 install --user $WHEEL_FILENAME
